update move robot
:+1:

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,4 +25,6 @@ build_flags =
     -Ilib/ArduinoPID/src
     -Ilib/PIDAutoioTune/src
     -Ilib/CytronMotorDriver/src
-    
+    -Ilib/fuzzy/src
+    -Ilib/TB6612/src
+    -Ilib/TB6612FNG/src
